# Audio-Classification

./: .gitignore  README.md  gui.py  pyproject.toml  transformer_audio_classification.ipynb
artifacts/cnn/: meta.pt
artifacts/feature_baseline/: meta.json  model.pkl
artifacts/mini_audio_transformer/: train_history.csv
artifacts/mini_audio_transformer/0p59/: meta.pt
core/: __init__.py
core/data/: __init__.py  io.py
core/models/: __init__.py  cnn.py  feature_model.py  features.py  sota.py  transformer.py
core/utils/: __init__.py  audio.py
sandboxes/: transformer_audio_classification.ipynb
src/audio_classification/: cnn.py  data.py  feature_model.py  features.py  models.py  sota.py  transformer.py  utils.py
